# CobraPyTest

./: .gitignore  Metabolik Modelleme E. coli iML1515.docx  flux_change_after_knockout.csv  flux_comparison.csv  model_deneme.py  pyproject.toml
CobraFolder/: Arginine.py  EmptyModel.py  ExistingModel.py  Glycolis.py  NewModel.py  aaaa.md  iML1515.ipynb  iML1515.py  test1.ipynb  test2.ipynb  test3.ipynb
