[project]
name = "cobratest"
version = "0.1.0"
description = ""
authors = [
    {name = "Doga Testere",email = "testeredogayasemen2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cobra (>=0.29.1,<0.30.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.4,<8.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
